--- a/service.yml
+++ b/service.yml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-app
   labels:
-    run: my-app
+    service: reverseproxy
+  name: reverseproxy-svc
 spec:
   ports:
-  - port: 80
-    protocol: TCP
+    - name: "8080"
+      port: 8080
+      targetPort: 8080
   selector:
-    run: my-app
+    service: reverseproxy
