--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
 script:
   - docker --version # print the version for logging
   - docker build -t simple-reverse-proxy --build-arg NAME=${NAME} .
-  - docker tag favorite-food morehwachege/simple-reverse-proxy:latest
+  - docker tag simple-reverse-proxy morehwachege/simple-reverse-proxy:latest
 after-success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker push morehwachege/simple-reverse-proxy
